# gravity_sim_cpp

./: .gitignore  CMakeLists.txt  MacOSXBundleInfo.plist.in  README.md  app  imgui.ini  tree.txt
app.dSYM/Contents/Resources/DWARF/: app
app.dSYM/Contents/Resources/Relocations/aarch64/: app.yml
assets/3dAssets/: sun.mtl
assets/3dmodels/: iss.mtl
assets/icons/: myIcon.icns
assets/music/albumCover/: all-good-folks-avatar-v1_4282299045668081.avif
include/: path_util.h
include/UI/: Buttons.h  Icon.h  ImageButton.h  Labbel.h  MessageTool.h  Slider.h  ToggleButton.h
include/engine/: CelestialObject.h  EngineIncludes.h  SystemeSolaire.h  Vec3.h
include/engine/Camera/: Camera.h
include/engine/CreationTools/: CreatorManager.h  ParametersCreator.h  PositionCreator.h  StateCreator.h  TextureCreator.h  VelocityCreator.h
include/engine/DataAPI/: ApiTool.h
include/engine/Physics/: Physics.h
include/engine/Planets/: BlackHole.h  Earth.h  Ice.h  Jupiter.h  Mars.h  Mercure.h  Moon.h  Neptune.h  Pluto.h  Rock.h  Saturn.h  Sun.h  Uranus.h  Venus.h  Volcanic.h  planetsIncludes.h
include/engine/QuizTools/: progressBar.h  questions.h  quiz.h
include/engine/RenderTools/: AxesTool.h  CameraOptionsTool.h  GlowTool.h  ISSTool.h  OptionsTool.h  PathTool.h  Render.h  RenderComponent.h  RenderContext.h  RenderImports.h  UITool.h  athmosphereTool.h  backgroundImageTool.h  backgroundTool.h  changeParametersTool.h  collisionTool.h  creatorTool.h  dialogBox.h  keysUI.h  minimapTool.h  musicPlayerTool.h  namesTool.h  notificationTool.h  objectsTool.h  orbitTool.h  particules.h  planeteInfoTool.h  quizTool.h  restartTool.h  saturnRingTool.h  saveSimulation.h  settingsTool.h  soundTool.h  steamTool.h  successTool.h  uranusRingTool.h  welcomeTool.h  zoomTool.h
include/game/: game.h
include/glad/: glad.h
include/save/: gameState.h  saveTool.h
include/states/: BaseState.h  EndState.h  LoadingState.h  MenuState.h  SimulationState.h  statesIncludes.h
shaders/menu_video/: shader.fs  shader.vs
src/: glad.c  main.cpp
src/UI/: Buttons.cpp  Icon.cpp  ImageButton.cpp  Labbel.cpp  MessageTool.cpp  Slider.cpp  ToggleButton.cpp
src/engine/: CelestialObject.cpp  SystemeSolaire.cpp  Vec3.cpp
src/engine/Camera/: Camera.cpp
src/engine/CreationTools/: CreatorManager.cpp  ParametersCreator.cpp  PositionCreator.cpp  StateCreator.cpp  TextureCreator.cpp  VelocityCreator.cpp
src/engine/DataApi/: ApiTool.cpp
src/engine/PhysicsTools/: Physics.cpp  physicsBACKUP.txt
src/engine/Planets/: BlackHole.cpp  Earth.cpp  Ice.cpp  Jupiter.cpp  Mars.cpp  Mercure.cpp  Moon.cpp  Neptune.cpp  Pluto.cpp  Rock.cpp  Saturn.cpp  Sun.cpp  Uranus.cpp  Venus.cpp  Volcanic.cpp
src/engine/QuizTool/: progressBar.cpp  questions.cpp  quiz.cpp
src/engine/RenderTools/: CameraOptionsTool.cpp  GlowTool.cpp  ISSTool.cpp  PathTool.cpp  Render.cpp  RenderComponent.cpp  RenderContext.cpp  UITool.cpp  athmosphereTool.cpp  axesTool.cpp  backgroundImageTool.cpp  backgroundTool.cpp  changeParametersTool.cpp  collisionTool.cpp  creatorTool.cpp  dialogBox.cpp  keysUI.cpp  minimapTool.cpp  musicPlayerTool.cpp  nameTool.cpp  notificationTool.cpp  objectsTool.cpp  optionsTool.cpp  orbitTool.cpp  particules.cpp  planeteInfoTool.cpp  quizTool.cpp  restartTool.cpp  saturnRingTool.cpp  saveSimulation.cpp  saveSimulationDrawTool.cpp  saveSimulationLoadDraw.cpp  settingsTool.cpp  soundTool.cpp  steamTool.cpp  successTool.cpp  uranusRingTool.cpp  welcomeTool.cpp  zoomTool.cpp
src/engine/RenderTools/Shaders/: frag_athmosphere.glsl  frag_clouds.glsl  frag_debug.glsl  frag_earth.glsl  frag_saturn.glsl  fragment_shader.glsl  fragment_star.glsl  fragment_star_effect.glsl  fragment_star_flou.glsl  fragment_star_post.glsl  vertex_athmosphere.glsl  vertex_clouds.glsl  vertex_debug.glsl  vertex_earth.glsl  vertex_shader.glsl  vertex_star.glsl  vertex_star_effect.glsl  vertex_star_flou.glsl  vertex_star_post.glsl
src/engine/SuccessTools/: Success.cpp  SuccessUI.cpp
src/game/: game.cpp
src/save/: gameState.cpp  saveTool.cpp
src/states/: BaseState.cpp  EndState.cpp  LoadingState.cpp  MenuState.cpp  SimulationState.cpp
